--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Home</title>
+    <title>Contact</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <h1 id="head1">Home Page</h1>
+    <h1 id="contact">Contact Us Page</h1>
     <nav id="navbar">
         <ol id="ol_list">
             <li id="#index" class="navlist"><a id="navlink" class="navlink" href="/index.html">Home</a></li>
