--- a/Blog.html
+++ b/Blog.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Blog</title>
+    <title>Home</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,15 +14,15 @@
 </head>
 
 <body>
-    <h1 id="contact">Blog Page</h1>
+    <h1 id="head1">Blog Page</h1>
     <nav id="navbar">
         <ol id="ol_list">
-            <li id="#index" class="navlist"><a id="navlink" class="navlink" href="/index.html">Home</a></li>
-            <li id="#index" class="navlist"><a id="navlink" class="navlink" href="/store.html">Store</a></li>
-            <li id="#index" class="navlist"><a id="navlink" class="navlink" href="/blog.html">Blog</a></li>
-            <li id="#index" class="navlist"><a id="navlink" class="navlink" href="/about.html">About</a></li>
-            <li id="#index" class="navlist"><a id="navlink" class="navlink" href="/contact.html">Contact Us</a></li>
-            <li id="#index" class="navlist"><a id="navlink" class="navlink" href="/services.html">Services</a></li>
+            <li id="#index" class="navlist"><a id="navlink" class="navlink" href="file:///C:/Users/KIRA%20H/Desktop/Git/index.html">Home</a></li>
+            <li id="#index" class="navlist"><a id="navlink" class="navlink" href="file:///C:/Users/KIRA%20H/Desktop/Git/store.html">Store</a></li>
+            <li id="#index" class="navlist"><a id="navlink" class="navlink" href="file:///C:/Users/KIRA%20H/Desktop/Git/blog.html">Blog</a></li>
+            <li id="#index" class="navlist"><a id="navlink" class="navlink" href="file:///C:/Users/KIRA%20H/Desktop/Git/about.html">About</a></li>
+            <li id="#index" class="navlist"><a id="navlink" class="navlink" href="file:///C:/Users/KIRA%20H/Desktop/Git/contact.html">Contact Us</a></li>
+            <li id="#index" class="navlist"><a id="navlink" class="navlink" href="file:///C:/Users/KIRA%20H/Desktop/Git/services.html">Services</a></li>
         </ol>
     </nav>
 </body>
