corrected links in store.html

--- a/store.html
+++ b/store.html
@@ -17,12 +17,12 @@
     <h1 id="head1">Store Page</h1>
     <nav id="navbar">
         <ol id="ol_list">
-            <li id="#index" class="navlist"><a id="navlink" class="navlink" href="./index.html">Home</a></li>
-            <li id="#index" class="navlist"><a id="navlink" class="navlink" href="./store.html">Store</a></li>
-            <li id="#index" class="navlist"><a id="navlink" class="navlink" href="./blog.html">Blog</a></li>
-            <li id="#index" class="navlist"><a id="navlink" class="navlink" href="./about">About</a></li>
-            <li id="#index" class="navlist"><a id="navlink" class="navlink" href="./contact.html">Contact Us</a></li>
-            <li id="#index" class="navlist"><a id="navlink" class="navlink" href="./services.html">Services</a></li>
+            <li id="#index" class="navlist"><a id="navlink" class="navlink" href="index.html">Home</a></li>
+            <li id="#index" class="navlist"><a id="navlink" class="navlink" href="store.html">Store</a></li>
+            <li id="#index" class="navlist"><a id="navlink" class="navlink" href="blog.html">Blog</a></li>
+            <li id="#index" class="navlist"><a id="navlink" class="navlink" href="about.html">About</a></li>
+            <li id="#index" class="navlist"><a id="navlink" class="navlink" href="contact.html">Contact Us</a></li>
+            <li id="#index" class="navlist"><a id="navlink" class="navlink" href="services.html">Services</a></li>
         </ol>
     </nav>
 </body>
