--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
         <ol id="ol_list">
             <li id="#index" class="navlist"><a id="navlink" class="navlink" href="index.html">Home</a></li>
             <li id="#index" class="navlist"><a id="navlink" class="navlink" href="store.html">Store</a></li>
-            <li id="#index" class="navlist"><a id="navlink" class="navlink" href="blog.html">Blog</a></li>
+            <li id="#index" class="navlist"><a id="navlink" class="navlink" href="Blog.html">Blog</a></li>
             <li id="#index" class="navlist"><a id="navlink" class="navlink" href="about.html">About</a></li>
             <li id="#index" class="navlist"><a id="navlink" class="navlink" href="contact.html">Contact Us</a></li>
             <li id="#index" class="navlist"><a id="navlink" class="navlink" href="services.html">Services</a></li>
