--- a/contact.html
+++ b/contact.html
@@ -4,17 +4,17 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Home</title>
+    <title>Contact</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='contact.css'>
     <script src='main.js'></script>
 </head>
 
 <body>
-    <h1 id="head1">Contact Page</h1>
+    <h1 id="head1">Contact Us Page</h1>
     <nav id="navbar">
         <ol id="ol_list">
             <li id="#index" class="navlist"><a id="navlink" class="navlink" href="index.html">Home</a></li>
