--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             <li id="#index" class="navlist"><a id="navlink" class="navlink" href="services.html">Services</a></li>
         </ol>
     </nav>
+      <main id="overall">
+    <img id="img" src="images/image-qr-code.png" alt=""><p id="txt1" class="txt">Improve your front-end skills by building projects</p><p id="txt2">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+  </main>
 </body>
 
 </html>
