--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </ol>
     </nav>
       <main id="overall">
-    <img id="img" src="images/image-qr-code.png" alt=""><p id="txt1" class="txt">Improve your front-end skills by building projects</p><p id="txt2">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    <img id="img" src="image-qr-code.png" alt=""><p id="txt1" class="txt">Improve your front-end skills by building projects</p><p id="txt2">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   </main>
 </body>
 
